[package]
name = "md-preview"
version = "0.8.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["ws"]}
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3.5.2"
dirs = "6.0.0"
notify = "8.2.0"
pulldown-cmark = "0.13.1"
serde = {version = "1.0.228", features = ["derive"]}
syntect = "5.3.0"
tokio = {version = "1.50.0", features = ["full"]}
toml = "1.0.7"
webbrowser = "1.2.0"
